--- a/scripts/_cristian_varia/permanent_magnet.ipynb
+++ b/scripts/_cristian_varia/permanent_magnet.ipynb
@@ -59,7 +59,6 @@
     "Br = 14200 # residual induction (G)\n",
     "D = 30 #magnet diameter (mm)\n",
     "L0 = 50 #magnet thickness (mm)\n",
-    "\n",
     "# magnet from Stuttgart's paper\n",
     "\n",
     "R = 0.5*D*1e-3\n",
@@ -78,6 +77,98 @@
     "plt.xlabel ('distance (cm)', fontsize = 15)\n",
     "plt.ylabel ('max tilt angle (deg)', fontsize = 15)\n",
     "plt.show()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Tuning resolution\n",
+    "If we can move the magnet by 1 micron, what is the resolution is magnetic field tuning?\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fraction of tuning field (dB/B):  2.4903596589274667e-05\n",
+      "Fraction of strong field (dB/B0):  2.6968070582533697e-06\n",
+      "Shift:  107.87228233013481 nT\n",
+      "ESR shift:  3.0204239052437742  kHz\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Magnet outside the cryo for fine alignment\n",
+    "Br = 14200 # residual induction (G)\n",
+    "D = 30 #magnet diameter (mm)\n",
+    "L0 = 50 #magnet thickness (mm)\n",
+    "# magnet from Stuttgart's paper\n",
+    "\n",
+    "R = 0.5*D*1e-3\n",
+    "L = L0*1e-3\n",
+    "x = 0.10 #magnet-sample distance (m)\n",
+    "dx = 1e-6 #magnet stage step (m)\n",
+    "B0 = 0.5*Br*(((L+x)/((R**2+(L+x)**2)**0.5))-(x/((x**2+R**2)**0.5)))\n",
+    "B1 = 0.5*Br*(((L+x+dx)/((R**2+(L+x+dx)**2)**0.5))-((x+dx)/(((x+dx)**2+R**2)**0.5)))\n",
+    "dB_tesla = abs(B1-B0)*1e-4\n",
+    "\n",
+    "B_strong = 400 #fixed permanent magnet field (G)\n",
+    "\n",
+    "print (\"Fraction of tuning field (dB/B): \", abs(B1-B0)/B0)\n",
+    "print (\"Fraction of strong field (dB/B0): \", abs(B1-B0)/B_strong)\n",
+    "print (\"Shift: \", 1e9*dB_tesla, \"nT\")\n",
+    "print (\"ESR shift: \", 28e6*dB_tesla, \" kHz\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "If the magnet is on a stage that vibrates by 200nm, what's the field instability?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fraction of tuning field (dB/B):  2.351587392600709e-05\n",
+      "Fraction of strong field (dB/B0):  4.816674003969012e-06\n",
+      "Shift:  192.66696015876053 nT\n",
+      "ESR shift:  5.394674884445295  kHz\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Magnet inside the cryo for fine alignment\n",
+    "Br = 14200 # residual induction (G)\n",
+    "D = 10 #magnet diameter (mm)\n",
+    "L0 = 0.7 #magnet thickness (mm)\n",
+    "\n",
+    "R = 0.5*D*1e-3\n",
+    "L = L0*1e-3\n",
+    "x = 0.01 #magnet-sample distance (m)\n",
+    "dx = 100e-9 #magnet stage vibration (m)\n",
+    "B0 = 0.5*Br*(((L+x)/((R**2+(L+x)**2)**0.5))-(x/((x**2+R**2)**0.5)))\n",
+    "B1 = 0.5*Br*(((L+x+dx)/((R**2+(L+x+dx)**2)**0.5))-((x+dx)/(((x+dx)**2+R**2)**0.5)))\n",
+    "dB_tesla = abs(B1-B0)*1e-4\n",
+    "\n",
+    "B_strong = 400 #fixed permanent magnet field (G)\n",
+    "\n",
+    "print (\"Fraction of tuning field (dB/B): \", abs(B1-B0)/B0)\n",
+    "print (\"Fraction of strong field (dB/B0): \", abs(B1-B0)/B_strong)\n",
+    "print (\"Shift: \", 1e9*dB_tesla, \"nT\")\n",
+    "print (\"ESR shift: \", 28e6*dB_tesla, \" kHz\")"
    ]
   },
   {
