--- a/scripts/_cristian_varia/permanent_magnet.ipynb
+++ b/scripts/_cristian_varia/permanent_magnet.ipynb
@@ -218,7 +218,7 @@
     }
    ],
    "source": [
-    "# Magnet for fine alignment\n",
+    "# RING MAGNET\n",
     "Br = 12600 # residual induction (G)\n",
     "Rext = 0.127/2 #ring external radius (m)\n",
     "Rint = 0.1016/2 #ring internal radius (m)\n",
